@@ -610,29 +610,24 @@
                         <scroll>false</scroll>
                         <align>left</align>
                     </control>
-                    <!--<control type="label">
-                        <width min="0" max="500">auto</width>
-                        <height>120</height>
-                        <label>: $VAR[SettingsHeaderLabel]</label>
-                        <font>Font-Alaska-S36-BL</font>
-                        <textcolor>Mod_Tags</textcolor>
-                        <scroll>false</scroll>
-                        <align>left</align>
-                    </control>-->
                 </control>
             </control>
-            <control type="label">
+            <control type="grouplist">
                 <posx>110</posx>
                 <posy>32</posy>
-                <width>765</width>
-                <height>120</height>
-                <!--<label>$VAR[SettingsHeaderSubLabel]</label>-->
-                <label>$VAR[SettingsHeaderLabel]</label>
-                <font>Font-Alaska-S28-L</font>
-                <textcolor>Mod_Tags</textcolor>
-                <scroll>false</scroll>
-                <align>left</align>
-                <wrapmultiline>false</wrapmultiline>
+                <orientation>horizontal</orientation>
+                <itemgap>0</itemgap>
+                <control type="label">
+                    <height>120</height>
+                    <width min="0" max="500">auto</width>
+                    <label>$VAR[SettingsHeaderLabel]</label>
+                    <font>Font-Alaska-S28-L</font>
+                    <textcolor>Mod_Tags</textcolor>
+                    <scroll>false</scroll>
+                    <align>left</align>
+                    <wrapmultiline>false</wrapmultiline>
+                </control>
+                
             </control>
         </control>
     </include>
