@@ -78,7 +78,7 @@
                     <width>360</width>
                     <height>609</height>
                     <itemgap>-1</itemgap>
-                    <onleft>5</onleft>
+                    <onleft>21</onleft>
                     <onright>5</onright>
                     <onup>3</onup>
                     <ondown>3</ondown>
@@ -165,17 +165,57 @@
                     <animation effect="fade" start="45" end="0" time="300" tween="sine" easing="inout" condition="!Control.IsVisible(41)">Conditional</animation>
                     <visible allowhiddenfocus="true">Control.HasFocus(40)</visible>
                 </control>
-                <!--<control type="image">
-                    <posx>335</posx>
-                    <posy>260</posy>
-                    <height>651</height>
-                    <width>1252</width>
-                    <texture border="70">arctic/common/border-20.png</texture>
-                </control>-->
                 
             </control>
         </control>
         
+        <!-- GOTHAM ADDITION -->
+        <!-- Settings Levels -->
+        <control type="group">
+            <visible>SubString(System.BuildVersion,13,Left)</visible>
+            <control type="button" id="21">
+                <posx>92</posx>
+                <posy>961</posy>
+                <width>85</width>
+                <height>85</height>
+                <texturefocus>DefaultAddonService.png</texturefocus>
+                <texturenofocus>DefaultAddonService.png</texturenofocus>
+                <colordiffuse>Mod_Tags_Dark</colordiffuse>
+                <onup>3</onup>
+                <ondown>3</ondown>
+                <onleft>3</onleft>
+                <onright>3</onright>
+                <onfocus>SettingsLevelChange</onfocus>
+                <onfocus>SetFocus(3)</onfocus>
+                <animation effect="fade" start="100" end="35" time="250" condition="!Control.HasFocus(21)">Conditional</animation>
+            </control>
+            <control type="label" id="20">
+                <posy>971</posy>
+                <posx>185</posx>
+                <height>77</height>
+                <width>1200</width>
+                <align>left</align>
+                <aligny>top</aligny>
+                <onup>3</onup>
+                <ondown>3</ondown>
+                <onleft>3</onleft>
+                <onright>3</onright>
+                <textcolor>Mod_Tags</textcolor>
+                <font>Font-Alaska-S32-BL</font>
+            </control>
+            <control type="label" id="6">
+                <description>Info Description</description>
+                <posy>1000</posy>
+                <posx>185</posx>
+                <height>32</height>
+                <width>1280</width>
+                <align>left</align>
+                <aligny>top</aligny>
+                <font>Font-Condensed-S30</font>
+                <textcolor>Mod_Tags</textcolor>
+                <scroll>true</scroll>
+            </control>
+        </control>
         <control type="label" id="2">
             <description>Fake Label</description>
             <posx>0</posx>
